blog index page

--- a/src/main/resources/static/css/mstyle.css
+++ b/src/main/resources/static/css/mstyle.css
@@ -145,7 +145,11 @@
 }
 
 .m-color-gray {
-    color: #777777;
+    color: #777777 !important;
+}
+
+.m-color-black {
+    color: #111111 !important;
 }
 
 .m-shadow-small {
