--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -53,9 +53,9 @@
             <div class="four wide column">
                 <h4 class="ui header">What's else</h4>
                 <div class="ui link list">
-                    <a href="#" class="item">Something</a>
-                    <a href="#" class="item">Something</a>
-                    <a href="#" class="item">Something</a>
+                    <a href="#" class="item">Something else</a>
+                    <a href="#" class="item">Something else</a>
+                    <a href="#" class="item">Something else</a>
                 </div>
             </div>
         </div>
