--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
         <div class="ui container">
             <div class="ui stackable grid">
                 <!-- left side -->
-                <div class="eleven wide column">
+                <div class="ten wide column">
                     <!-- Top Part -->
                     <div class="ui top attached segment">
                         <div class="ui middle aligned two column grid">
@@ -46,150 +46,51 @@
                                 <h3 class="ui header">Post</h3>
                             </div>
                             <div class="right aligned column">
-                                Total <h3 class="ui header m-inline-block m-text-thin"> 14 </h3>
+                                Total <h3 class="ui header m-inline-block m-text-thin" th:text="${page.totalElements}"> 14 </h3>
                             </div>
                         </div>
                     </div>
 
                     <!-- list of content -->
                     <div class="ui padded attached segment">
-                        <div class="ui vertical segment m-padded-tb-m">
-                            <h3 class="ui header">This is the title</h3>
-                            <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
+                        <div class="ui vertical segment m-padded-tb-m" th:each="post : ${page.content}">
+                            <h3 class="ui header"><a href="#" th:href="@{/post/{id}(id=${post.id})}" target="_blank" th:text="${post.title}">This is the title</a></h3>
+                            <p th:text="|${post.description} ...|">This is the description</p>
                             <div class="ui grid">
                                 <div class="eleven wide column">
                                     <div class="ui horizontal link list">
                                         <div class="item">
                                             <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">Ah-tao</a></div>
+                                            <div class="content"><a href="#" class="header" th:text="${post.user.name}">Ah-tao</a></div>
                                         </div>
                                         <div class="item">
-                                            <i class="calendar icon"></i> Sept 7 2019
+                                            <span th:text="${#dates.format(post.updated, 'MM-dd-yyyy')}">Sept 7 2019</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui basic label m-padded-tb-xs m-text-thin">Java</a>
+                                    <a href="#" target="_blank" class="ui basic label m-padded-tb-xs m-text-thin" th:text="${post.topic.name}">Java</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="ui vertical segment m-padded-tb-m">
-                            <h3 class="ui header">This is the title</h3>
-                            <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                            <div class="ui grid">
-                                <div class="eleven wide column">
-                                    <div class="ui horizontal link list">
-                                        <div class="item">
-                                            <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                        </div>
-                                        <div class="item">
-                                            <i class="calendar icon"></i> Sept 7 2019
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui basic label m-padded-tb-xs m-text-thin">Java</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="ui vertical segment m-padded-tb-m">
-                            <h3 class="ui header">This is the title</h3>
-                            <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                            <div class="ui grid">
-                                <div class="eleven wide column">
-                                    <div class="ui horizontal link list">
-                                        <div class="item">
-                                            <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                        </div>
-                                        <div class="item">
-                                            <i class="calendar icon"></i> Sept 7 2019
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui basic label m-padded-tb-xs m-text-thin">Java</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="ui vertical segment m-padded-tb-m">
-                            <h3 class="ui header">This is the title</h3>
-                            <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                            <div class="ui grid">
-                                <div class="eleven wide column">
-                                    <div class="ui horizontal link list">
-                                        <div class="item">
-                                            <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                        </div>
-                                        <div class="item">
-                                            <i class="calendar icon"></i> Sept 7 2019
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui basic label m-padded-tb-xs m-text-thin">Java</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="ui vertical segment m-padded-tb-m">
-                            <h3 class="ui header">This is the title</h3>
-                            <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                            <div class="ui grid">
-                                <div class="eleven wide column">
-                                    <div class="ui horizontal link list">
-                                        <div class="item">
-                                            <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                        </div>
-                                        <div class="item">
-                                            <i class="calendar icon"></i> Sept 7 2019
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui basic label m-padded-tb-xs m-text-thin">Java</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="ui vertical segment m-padded-tb-m">
-                            <h3 class="ui header">This is the title</h3>
-                            <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                            <div class="ui grid">
-                                <div class="eleven wide column">
-                                    <div class="ui horizontal link list">
-                                        <div class="item">
-                                            <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                        </div>
-                                        <div class="item">
-                                            <i class="calendar icon"></i> Sept 7 2019
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui basic label m-padded-tb-xs m-text-thin">Java</a>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
 
                     <!-- bottom part -->
-                    <div class="ui bottom attached segment">
+                    <div class="ui bottom attached segment" th:if="${page.totalPages}>1">
                         <div class="ui middle aligned two column grid">
                             <div class="column">
-                                <a href="#" class="ui button">Prev</a>
+                                <a href="#" th:href="@{/(page=${page.number}-1)}" th:unless="${page.first}" class="ui button">Prev</a>
                             </div>
                             <div class="right aligned column">
-                                <a href="#" class="ui button">Next</a>
+                                <a href="#" th:href="@{/(page=${page.number}+1)}" th:unless="${page.last}" class="ui button">Next</a>
                             </div>
                         </div>
                     </div>
 
                 </div>
 
+
+                <div class="one wide column"></div>
                 <!-- right side -->
                 <div class="five wide column">
                     <!-- Topic -->
@@ -204,31 +105,10 @@
                         </div>
                         <div class="ui segment">
                             <div class="ui fluid vertical menu">
-                                <a href="#" class="item">
-                                    Java
-                                    <div class="ui label m-opacity">3</div>
+                                <a href="#" class="item" th:each="topic : ${topics}">
+                                    <span th:text="${topic.name}">Topic</span>
+                                    <div class="ui label m-opacity" th:text="${#arrays.length(topic.posts)}">1</div>
                                 </a>
-                                <a href="#" class="item">
-                                    Python
-                                    <div class="ui label m-opacity">2</div>
-                                </a>
-                                <a href="#" class="item">
-                                    C/C++
-                                    <div class="ui label m-opacity">1</div>
-                                </a>
-                                <a href="#" class="item">
-                                    Other
-                                    <div class="ui label m-opacity">3</div>
-                                </a>
-                                <a href="#" class="item">
-                                    Life
-                                    <div class="ui label m-opacity">2</div>
-                                </a>
-                                <a href="#" class="item">
-                                    System
-                                    <div class="ui label m-opacity">3</div>
-                                </a>
-
                             </div>
                         </div>
                     </div>
@@ -243,12 +123,10 @@
                             </div>
                         </div>
                         <div class="ui segment">
-                            <a href="#" target="_blank" class="ui label m-margin-tb-xs">Git<div class="detail">3</div></a>
-                            <a href="#" target="_blank" class="ui label m-margin-tb-xs">ubuntu<div class="detail">2</div></a>
-                            <a href="#" target="_blank" class="ui label m-margin-tb-xs">Machine Learning<div class="detail">3</div></a>
-                            <a href="#" target="_blank" class="ui label m-margin-tb-xs">Algorithm<div class="detail">1</div></a>
-                            <a href="#" target="_blank" class="ui label m-margin-tb-xs">Spring Boot<div class="detail">3</div></a>
-                            <a href="#" target="_blank" class="ui label m-margin-tb-xs">Bash<div class="detail">3</div></a>
+                            <a href="#" target="_blank" class="ui label m-margin-tb-xs" th:each="tag : ${tags}">
+                                <span th:text="${tag.name}">Tag</span>
+                                <div class="detail" th:text="${#arrays.length(tag.posts)}">1</div>
+                            </a>
                         </div>
                     </div>
                 </div>
