--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -39,7 +39,7 @@
     <div class="ui error message m-padded-tb-l" >
         <div class="ui container">
             <h2>Error</h2>
-            <p>Sorry, Something goes wrong here, please contact admin...</p>
+            <p>Sorry, Something wrong...</p>
         </div>
     </div>
 </div>
