--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -43,7 +43,7 @@
                         <h3 class="ui header">Tag</h3>
                     </div>
                     <div class="right aligned column">
-                        Total <h3 class="ui header m-inline-block m-text-thin"> 14 </h3>
+                        Total&nbsp;&nbsp;<h3 class="ui header m-inline-block m-text-thin"> 14 </h3>
                     </div>
                 </div>
             </div>
