--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
                                 <h3 class="ui header">Post</h3>
                             </div>
                             <div class="right aligned column">
-                                Total <h3 class="ui header m-inline-block m-text-thin" th:text="${page.totalElements}"> 14 </h3>
+                                Total&nbsp;&nbsp;<h3 class="ui header m-inline-block m-text-thin" th:text="${page.totalElements}"> 14 </h3>
                             </div>
                         </div>
                     </div>
