--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -38,13 +38,12 @@
         <div class="ui container">
             <div class="ui stackable grid">
                 <!-- left side -->
-                <div class="five wide column">
-
+                <div class="four wide column">
                 </div>
 
+                <div class="one wide column"></div>
                 <!-- right side -->
                 <div class="eleven wide column">
-
                 </div>
             </div>
 
