--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -43,155 +43,51 @@
                         <h3 class="ui header">Tag</h3>
                     </div>
                     <div class="right aligned column">
-                        Total&nbsp;&nbsp;<h3 class="ui header m-inline-block m-text-thin"> 14 </h3>
+                        Total&nbsp;&nbsp;<h3 class="ui header m-inline-block m-text-thin" th:text="${#arrays.length(tags)}"> 14 </h3>
                     </div>
                 </div>
             </div>
             <!-- Topic -->
             <div class="ui bottom attached segment">
-                <a href="#" target="_blank" class="ui label large m-margin-tb-xs">Git<div class="detail">3</div></a>
-                <a href="#" target="_blank" class="ui label basic large m-margin-tb-xs">ubuntu<div class="detail">2</div></a>
-                <a href="#" target="_blank" class="ui label basic large m-margin-tb-xs">Machine Learning<div class="detail">3</div></a>
-                <a href="#" target="_blank" class="ui label basic large m-margin-tb-xs">Algorithm<div class="detail">1</div></a>
-                <a href="#" target="_blank" class="ui label basic large m-margin-tb-xs">Spring Boot<div class="detail">3</div></a>
-                <a href="#" target="_blank" class="ui label basic large m-margin-tb-xs">Bash<div class="detail">3</div></a>
+                <a href="#" th:href="@{/tags/{id}(id=${tag.id})}" class="ui basic label large m-margin-tb-xs" th:classappend="${tag.id==activeTag} ? 'black'" th:each="tag : ${tags}">
+                    <span th:text="${tag.name}">tag</span>
+                    <div class="detail" th:text="${#arrays.length(tag.posts)}">3</div>
+                </a>
             </div>
             <!-- list of posts in a topic -->
             <div class="ui top attached segment m-padded-tb-m m-padded-lr-responsive">
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
+                <div class="ui vertical segment m-padded-tb-m" th:each="post : ${page.content}">
+                    <h3 class="ui header"><a href="#" th:href="@{/post/{id}(id=${post.id})}" target="_blank" th:text="${post.title}">This is the title</a></h3>
+                    <p th:text="|${post.description} ...|">This is the description</p>
                     <div class="ui grid">
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
                                     <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
+                                    <div class="content"><a href="#" class="header" th:text="${post.user.name}">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
+                                    <span th:text="${#dates.format(post.updated, 'MMM dd yyyy')}">Sep 7 2019</span>
                                 </div>
                             </div>
                         </div>
                         <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
+                            <a href="#" th:href="@{/topics/{id}(id=${post.topic.id})}" target="_blank" class="ui basic label m-padded-tb-xs m-text-thin" th:text="${post.topic.name}">Java</a>
                         </div>
                     </div>
                 </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-
             </div>
             <!-- Bottom -->
-            <div class="ui bottom attached segment">
+            <div class="ui bottom attached segment" th:if="${page.totalPages}>1">
                 <div class="ui middle aligned two column grid">
                     <div class="column">
-                        <a href="#" class="ui button">Prev</a>
+                        <a href="#" th:href="@{/(page=${page.number}-1)}" th:unless="${page.first}" class="ui button">Prev</a>
                     </div>
                     <div class="right aligned column">
-                        <a href="#" class="ui button">Next</a>
+                        <a href="#" th:href="@{/(page=${page.number}+1)}" th:unless="${page.last}" class="ui button">Next</a>
                     </div>
                 </div>
             </div>
-
 
         </div>
     </div>
