--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -34,7 +34,7 @@
 
 
     <!-- main content -->
-    <div class="m-padded-tb-l m-container">
+    <div class="m-padded-tb-l m-container-s">
         <div class="ui container">
             <!-- Top --->
             <div class="ui segment">
@@ -43,74 +43,21 @@
                         <h3 class="ui header">Timeline</h3>
                     </div>
                     <div class="right aligned column">
-                        Total <h3 class="ui header m-inline-block m-text-thin"> 14 </h3>
+                        Total&nbsp;&nbsp;<h3 class="ui header m-inline-block m-text-thin" th:text="${postCount}"> 14 </h3>
                     </div>
                 </div>
             </div>
             <!-- Timeline -->
-            <h2 class="ui center aligned header">2019</h2>
-            <div class="ui fluid vertical menu">
-                <a href="#" target="_blank" class="item">
-                        This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-            </div>
-            <br>
-
-            <h2 class="ui center aligned header">2018</h2>
-            <div class="ui fluid vertical menu">
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-            </div>
-            <br>
-
-            <h2 class="ui center aligned header">2017</h2>
-            <div class="ui fluid vertical menu">
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-                <a href="#" target="_blank" class="item">
-                    This is the title
-                    <div class="ui basic black label">Sep 07</div>
-                </a>
-            </div>
-            <br>
-
+            <th:block th:each="item : ${timelineMap}">
+                <h2 class="ui center aligned header" th:text="${item.key}">2019</h2>
+                <div class="ui fluid vertical menu">
+                    <a href="#" th:href="@{/post/{id}(id=${post.id})}" target="_blank" class="item" th:each="post : ${item.value}">
+                        <span th:text="${post.title}">title</span>
+                        <div class="ui basic label" th:text="${#dates.format(post.updated, 'MMM dd')}">Sep 07</div>
+                    </a>
+                </div>
+                <br>
+            </th:block>
 
         </div>
     </div>
