--- a/src/main/resources/templates/topics.html
+++ b/src/main/resources/templates/topics.html
@@ -43,172 +43,48 @@
                         <h3 class="ui header">Topic</h3>
                     </div>
                     <div class="right aligned column">
-                        Total&nbsp;&nbsp;<h3 class="ui header m-inline-block m-text-thin"> 14 </h3>
+                        Total&nbsp;&nbsp;<h3 class="ui header m-inline-block m-text-thin" th:text="${#arrays.length(topics)}">14</h3>
                     </div>
                 </div>
             </div>
-            <!-- Topic -->
+            <!-- Topics -->
             <div class="ui bottom attached segment">
-                <div class="ui labeled button m-margin-tb-xs">
-                    <a href="#" class="ui button">Java</a>
-                    <div class="ui  basic left pointing label">12</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-xs">
-                    <a href="#" class="ui basic button">Python</a>
-                    <div class="ui basic left pointing label">15</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-xs">
-                    <a href="#" class="ui basic button">Life</a>
-                    <div class="ui basic left pointing label">16</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-xs">
-                    <a href="#" class="ui basic button">C/C++</a>
-                    <div class="ui basic left pointing label">18</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-xs">
-                    <a href="#" class="ui basic button">System</a>
-                    <div class="ui basic left pointing label">11</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-xs">
-                    <a href="#" class="ui basic button">Machine Learning</a>
-                    <div class="ui basic left pointing label">10</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-xs">
-                    <a href="#" class="ui basic button">Web</a>
-                    <div class="ui basic left pointing label">15</div>
+                <div class="ui labeled button m-margin-tb-xs" th:each="topic : ${topics}">
+                    <a href="#" th:href="@{/topics/{id}(id=${topic.id})}" class="ui basic button" th:classappend="${topic.id==activeTopic} ? 'black'" th:text="${topic.name}">Java</a>
+                    <div class="ui basic left pointing label" th:classappend="${topic.id==activeTopic} ? 'black'" th:text="${#arrays.length(topic.posts)}">12</div>
                 </div>
             </div>
             <!-- list of posts in a topic -->
             <div class="ui top attached segment m-padded-tb-m m-padded-lr-responsive">
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
+                <div class="ui vertical segment m-padded-tb-m" th:each="post : ${page.content}">
+                    <h3 class="ui header"><a href="#" th:href="@{/post/{id}(id=${post.id})}" target="_blank" th:text="${post.title}">This is the title</a></h3>
+                    <p th:text="|${post.description} ...|">This is the description</p>
                     <div class="ui grid">
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
                                     <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
+                                    <div class="content"><a href="#" class="header" th:text="${post.user.name}">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
+                                    <span th:text="${#dates.format(post.updated, 'MMM dd yyyy')}">Sept 7 2019</span>
                                 </div>
                             </div>
                         </div>
                         <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui vertical segment m-padded-tb-m m-padded-lr-m">
-                    <h3 class="ui header">This is the title</h3>
-                    <p class="">This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content. This is the content</p>
-                    <div class="ui grid">
-                        <div class="eleven wide column">
-                            <div class="ui horizontal link list">
-                                <div class="item">
-                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
-                                    <div class="content"><a href="#" class="header">Ah-tao</a></div>
-                                </div>
-                                <div class="item">
-                                    <i class="calendar icon"></i> Sept 7 2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="five wide column right aligned">
-                            <a href="#" target="_blank" class="ui basic label m-padded-tb-xs">Java</a>
+                            <a href="#" target="_blank" th:href="@{/topics/{id}(id=${post.topic.id})}" class="ui basic label m-padded-tb-xs m-text-thin" th:text="${post.topic.name}">Java</a>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Bottom -->
-            <div class="ui bottom attached segment">
+            <div class="ui bottom attached segment" th:if="${page.totalPages}>1">
                 <div class="ui middle aligned two column grid">
                     <div class="column">
-                        <a href="#" class="ui button">Prev</a>
+                        <a href="#" th:href="@{/(page=${page.number}-1)}" th:unless="${page.first}" class="ui button">Prev</a>
                     </div>
                     <div class="right aligned column">
-                        <a href="#" class="ui button">Next</a>
+                        <a href="#" th:href="@{/(page=${page.number}+1)}" th:unless="${page.last}" class="ui button">Next</a>
                     </div>
                 </div>
             </div>
