bug fix and about page

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -38,15 +38,39 @@
         <div class="ui container">
             <div class="ui stackable grid">
                 <!-- left side -->
-                <div class="four wide column">
+                <div class="five wide column">
+                    <div class="ui segment">
+                        <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui rounded image">
+                    </div>
                 </div>
-
-                <div class="one wide column"></div>
                 <!-- right side -->
                 <div class="eleven wide column">
+                    <div class="ui top attached segment">
+                        <div class="ui header">Taotao Ma</div>
+                    </div>
+                    <div class="ui attached segment">
+                        <p>An independent developer; A lifelong learner.</p>
+                        <p>Love programming and exploring ways to learn programming efficiently...</p>
+                    </div>
+                    <div class="ui attached segment">
+                        <div class="ui basic label">Programming</div>
+                        <div class="ui basic label">Thinking</div>
+                        <div class="ui basic label">Sport</div>
+                    </div>
+                    <div class="ui attached segment">
+                        <div class="ui label">Java</div>
+                        <div class="ui label">Python</div>
+                        <div class="ui label">C / C++</div>
+                        <div class="ui label">Android</div>
+                        <div class="ui label">...</div>
+                    </div>
+                    <div class="ui bottom attached segment">
+                        <a href="#" class="ui circular icon button"><i class="envelope icon"></i></a>
+                        <a href="#" class="ui circular icon button"><i class="github icon"></i></a>
+                        <a href="#" class="ui circular icon button"><i class="linkedin icon"></i></a>
+                    </div>
                 </div>
             </div>
-
         </div>
     </div>
 
