--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -26,7 +26,8 @@
                         </div>
 
                         <div class="menu">
-                            <a class="item" href="#" th:href="@{/admin/logout}">log out</a>
+                            <a class="item" href="#" th:href="@{/}">Home</a>
+                            <a class="item" href="#" th:href="@{/admin/logout}">Logout</a>
                         </div>
                     </div>
                 </div>
